examples/passing/RedefinedFixity/M3.purs
module M3 where

import Prelude ()

import M1
import M2
