examples/failing/ModuleDeps.purs
module M1 where

import M2

module M2 where

import M1
